examples/test/testpolicy15978.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15978
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key36: value32
      key19: value46
      key44: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value34
          key20: value12
          key45: value26
